# p4ws

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
cmake/: bfsde-build.cmake  bfsde-config.cmake  bmv2-build.cmake  bmv2-config.cmake  p4ws-build.cmake  p4ws-config.cmake  utils.cmake
docs/: build-p4-program.md  build-p4ws.md  transfer-p4-program.md
examples/bmv2/: CMakeLists.txt  myprog.p4
examples/bmv2/test/: .gitignore  run-loadmn.sh  topo.json
examples/tna/tna_ecmp/: CMakeLists.txt  tna_ecmp.p4
examples/tna/tna_ecmp/test/: .gitignore  README.md  test.py
examples/tna/tna_ecn/: CMakeLists.txt  tna_ecn.p4
examples/tna/tna_externs/: CMakeLists.txt  config.py  tna_externs.p4
examples/tna/tna_externs/test/: .gitignore  README.md  test.py
examples/tofino/: CMakeLists.txt  myprog.p4
examples/tofino/test/: .gitignore  net.json  run-loadmn-2sw.sh  run-loadmn.sh  topo-2sw.json  topo.json
p4src/: compiler.p4  ether.p4  ip.p4  ipv6.p4  tcp.p4  udp.p4  utils.p4  vlan.p4
p4src/infiniband/: all.p4  base.p4  parser.p4  transport.p4
p4src/p4ws/: arch.p4  compiler.p4  ether.p4  ip.p4  ipv6.p4  tcp.p4  udp.p4  utils.p4  vlan.p4
p4src/p4ws/flow/: flowlet.p4
p4src/p4ws/infiniband/: all.p4  base.p4  mgmt.p4  parser.p4  transport.p4
p4src/p4ws/qos/: ecn.p4
src/p4ws/: __init__.py  __main__.py  loadmn.py  patch.py  tar.py  utils.py  version.py
src/p4ws/mnhlp/: JsonTopo.py  __init__.py  error.py
src/p4ws/mnhlp/nodes/: SimpleSwitch.py  SimpleSwitchGrpc.py  TofinoModel.py
src/p4ws/targets/: __init__.py  bfsde.py  bmv2.py
src/p4ws/targets/patches/bfsde/: README.md  bfrtcli-9.13.3.py.diff
test/: myprog.p4
utils/: activate-bfsde.sh  activate-p4ws.sh  setup-vscode.py
